--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=GGJ2024
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Maps/L_MainMenu.L_MainMenu
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
